fix(graph-container): update color variable for improved visibility

--- a/style.scss
+++ b/style.scss
@@ -314,7 +314,7 @@ tooltip {
 }
 
 .graph-container {
-  $color: (#1A39ED, #F32626);
+  $color: (#1A39ED, #3353F3);
   margin: 3px;
   padding: 3px;
   border-radius: 1.5px;
